kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: foodexpress

spec:

  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:

      containers:

      - name: frontend

        image: madhu934652/food-express-frontend:latest

        ports:
        - containerPort: 80
